  * added support for pb-constraints in [w]cnf+ format
  * "tweety" asp options are now applied when using config "many"
  * fixed handling of "sticky" logic program options
  * fixed tests for CLASP_BUILD_WITH_THREADS=OFF
  * fixed potential infinite loop in DimcasParser
  * fixed potential nullptr access in parallel solve
  * fixed issue https://github.com/potassco/clasp/issues/103
  * fixed issue https://github.com/potassco/clasp/issues/101

clasp 3.3.10: Wednesday, 7th February 2024
  * fixed issue https://github.com/potassco/clasp/issues/88
  * fixed issue https://github.com/potassco/clasp/issues/90
  * fixed issue https://github.com/potassco/clasp/issues/91
  * fixed issue https://github.com/potassco/clasp/issues/93
  * fixed issue https://github.com/potassco/clasp/issues/95
  * fixed issue https://github.com/potassco/clasp/issues/96
  * fixed issue https://github.com/potassco/clasp/issues/98
  * fixed deprecation warnings (cf. https://github.com/potassco/clasp/pull/94)
  * fixed build error with VS 2022 17.8 (cf. https://github.com/potassco/clasp/pull/97)
  * dropped incorrect ConstString optimization (cf. https://github.com/potassco/clingo/issues/475)
  * clingo: added support for propagator undo mode

clasp 3.3.9: Saturday, 10th September 2022
  * fixed issue https://github.com/potassco/clasp/issues/80
  * fixed issue https://github.com/potassco/clasp/issues/81
  * fixed issue https://github.com/potassco/clasp/issues/84
  * fixed issue https://github.com/potassco/clasp/issues/85
  * refined overflow checks in LogicProgram

clasp 3.3.8: Tuesday, 3rd May 2022
  * fixed issue https://github.com/potassco/clasp/issues/75
  * fixed issue https://github.com/potassco/clasp/issues/76
  * fixed issue https://github.com/potassco/clingcon/issues/85
  * updated catch2 (https://github.com/potassco/clasp/issues/73)
  * adjusted TextOutput (https://github.com/potassco/clingo/issues/355)
  * moved clasp app to cli part of library

clasp 3.3.7: Tuesday, 16th November 2021